# registry

./: .gitignore  MODULE.bazel  rabbitizer.20240519-142417.json
modules/binaryen/: metadata.json
modules/binaryen/114.0.1/: MODULE.bazel  source.json
modules/binaryen/114.0.10/: MODULE.bazel  presubmit.yml  source.json
modules/binaryen/114.0.2/: MODULE.bazel  source.json
modules/binaryen/114.0.3/: MODULE.bazel  source.json
modules/binaryen/114.0.4/: MODULE.bazel  source.json
modules/binaryen/114.0.5/: MODULE.bazel  source.json
modules/binaryen/114.0.6/: MODULE.bazel  source.json
modules/binaryen/114.0.7/: MODULE.bazel  source.json
modules/binaryen/114.0.8/: MODULE.bazel  source.json
modules/binaryen/114.0.9/: MODULE.bazel  source.json
modules/cc_config/: metadata.json
modules/cc_config/2.0.0/: MODULE.bazel  presubmit.yml  source.json
modules/cloudabi/: metadata.json
modules/cloudabi/0.0.1/: presubmit.yml  source.json
modules/cloudtools/: metadata.json
modules/cloudtools/0.0.1/: presubmit.yml  source.json
modules/rabbitizer/: metadata.json
modules/rabbitizer/1.10.0/: MODULE.bazel  source.json
modules/rabbitizer/1.10.1/: MODULE.bazel  source.json
modules/rabbitizer/1.10.2/: MODULE.bazel  source.json
modules/sleigh/: metadata.json
modules/sleigh/0.0.1/: source.json
modules/w2c2/: metadata.json
work/: binaryen.json  cc_config.json  cloudabi.20250105-145423.json  cloudtools.20250105-190801.json  rabbitizer.json  sleigh.json  w2c2.json
work/cloudabi/: MODULE.bazel
work/cloudtools/: MODULE.bazel
work/rabbitizer/: MODULE.bazel
(+15 files in other folders)
